# OpenCL

./: CMakeLists.txt
src/: gemm.c  gemm.clc  main.c  platform_test.c
